[project]
authors = [{ name = "Allen Chou", email = "f1470891079@gmail.com" }]
dependencies = [
  "dictpress (>=0.3.0)",
  "openai (>=1,<2)",
  "openai-agents (>=0.1.0,<1.0.0)",
  "pydantic (>=2)",
  "str-or-none",
]
description = "AllenChou's Python template."
license = { text = "MIT" }
name = "ac-py-template"
readme = "README.md"
requires-python = ">=3.11,<4"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/allen2c/ac-py-template"
"PyPI" = "https://pypi.org/project/ac-py-template/"
Repository = "https://github.com/allen2c/ac-py-template"

[tool.poetry]
packages = [{ include = "ac_py_template" }]

[tool.poetry.extras]
all = []

[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = "*" }
codepress = "*"
isort = "*"
poetry-plugin-export = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
rich = "*"
rich-color-support = "*"
setuptools = "*"
twine = "*"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ["E203", "E704", "W503"]
max-line-length = 88

[tool.pytest.ini_options]
env = ["ENVIRONMENT=test", "PYTEST_IS_RUNNING=true"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
